--- a/Mtd.Stopwatch.Core.csproj
+++ b/Mtd.Stopwatch.Core.csproj
@@ -13,4 +13,9 @@
 		<PackageReference Include="Mtd.Core" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include=".\icon.png" Pack="true" PackagePath="\"/>
+		<None Include=".\readme.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
+
 </Project>
