--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -55,7 +55,7 @@ jobs:
       packages: write
     steps:
       - name: Download Package Artifact
-        uses: download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: nupkg
           path: $OUTPUT/
