--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -25,6 +25,9 @@ jobs:
     permissions:
       packages: read
       contents: read
+    env:
+      MtdGithubUserName: CUMTD
+      MtdGithubAccessToken: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v3
